@@ -12,7 +12,7 @@ item: Global
   Log Pathname=%MAINDIR%\INSTALL.LOG
   Message Font=MS Sans Serif
   Font Size=8
-  Disk Label=tcl8.4b1
+  Disk Label=tcl8.4b2
   Disk Filename=setup
   Patch Flags=0000000000000001
   Patch Threshold=85
@@ -1587,8 +1587,8 @@ item: Install File
   Flags=0000000000000010
 end
 item: Install File
-  Source=${__TCLBASEDIR__}\win\release\tclreg84.dll
-  Destination=%MAINDIR%\lib\tcl%VER%\reg1.0\tclreg84.dll
+  Source=${__TCLBASEDIR__}\win\release\tclreg10.dll
+  Destination=%MAINDIR%\lib\tcl%VER%\reg1.0\tclreg10.dll
   Flags=0000000000000010
 end
 item: Install File
@@ -1597,8 +1597,8 @@ item: Install File
   Flags=0000000000000010
 end
 item: Install File
-  Source=${__TCLBASEDIR__}\win\release\tcldde84.dll
-  Destination=%MAINDIR%\lib\tcl%VER%\dde1.2\tcldde84.dll
+  Source=${__TCLBASEDIR__}\win\release\tcldde12.dll
+  Destination=%MAINDIR%\lib\tcl%VER%\dde1.2\tcldde12.dll
   Flags=0000000000000010
 end
 item: Install File
