@@ -1,11 +1,11 @@
 Tcl/Tk 8.4 for Windows, Binary Distribution
 
-RCS: @(#) $Id: README.binary,v 1.29 2002/06/21 23:55:35 dkf Exp $ 
+RCS: @(#) $Id: README.binary,v 1.30 2002/07/14 17:29:03 dgp Exp $ 
 
 1. Introduction
 --------------- 
 
-This directory contains the binary distribution of Tcl/Tk 8.4b1 for
+This directory contains the binary distribution of Tcl/Tk 8.4b2 for
 Windows.  It was compiled with Microsoft Visual C++ 6.0 using Win32
 API, so that it will run under Windows NT, 95, 98 and 2000.
 
